feat: 지도에 필터링 기능 추가 구현